[gd_scene load_steps=11 format=3 uid="uid://beubowqkajfyu"]

[ext_resource type="Script" path="res://singleplayer.gd" id="1_njtn5"]
[ext_resource type="PackedScene" uid="uid://kh52hvttlli3" path="res://level_type_1.tscn" id="2_16qd0"]
[ext_resource type="PackedScene" uid="uid://dysymd2xta0tp" path="res://player.tscn" id="3_7bvho"]
[ext_resource type="PackedScene" uid="uid://bigyo7ptmnjkp" path="res://gaco.tscn" id="4_0sn6a"]
[ext_resource type="PackedScene" uid="uid://bs52d0ehmwcnt" path="res://quiz_system.tscn" id="5_vkow4"]
[ext_resource type="PackedScene" uid="uid://bhlb7o6kvgqu4" path="res://game_ui.tscn" id="6_arlut"]
[ext_resource type="PackedScene" uid="uid://de81vigbrtars" path="res://level_passed_menu.tscn" id="7_2jtko"]
[ext_resource type="PackedScene" uid="uid://csqkphc4b1x1p" path="res://pause_menu.tscn" id="7_hnk0x"]
[ext_resource type="AudioStream" uid="uid://wi7t3lepepcy" path="res://Assets/MusicSFX/Engklek_Hop_Gameplay_Music.mp3" id="9_qsawe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ou6e3"]
size = Vector2(29.5, 20)

[node name="Singleplayer" type="Node2D"]
script = ExtResource("1_njtn5")

[node name="LevelType1" parent="." instance=ExtResource("2_16qd0")]
unique_name_in_owner = true
z_index = -1

[node name="Platform" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2(209, 418)
shape = SubResource("RectangleShape2D_ou6e3")

[node name="Player" parent="." instance=ExtResource("3_7bvho")]
unique_name_in_owner = true
z_index = 1
position = Vector2(160, 384)

[node name="Gaco" parent="." instance=ExtResource("4_0sn6a")]
unique_name_in_owner = true
position = Vector2(209, 398)

[node name="QuizSystem" parent="." instance=ExtResource("5_vkow4")]
unique_name_in_owner = true

[node name="GameUI" parent="." instance=ExtResource("6_arlut")]
unique_name_in_owner = true

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="LevelPassedMenu" parent="MenuCanvas" instance=ExtResource("7_2jtko")]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="PauseMenu" parent="MenuCanvas" instance=ExtResource("7_hnk0x")]
unique_name_in_owner = true
visible = false

[node name="GameplayMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_qsawe")
bus = &"Music"
